# DietProject

./: .gitignore  CMakeLists.txt  main.cpp
ConsoleInputManager/include/: ConsoleInputManager.h
ConsoleInputManager/src/: ConsoleInputManager.cpp
DietController/include/: DietController.h  DietControllerAlreadyIdeal.h  DietControllerChooseDiet.h  DietControllerChoosePeriod.h  DietControllerConfirmDiet.h  DietControllerExit.h  DietControllerGreeting.h  DietControllerIdealWeight.h  DietControllerInitHeight.h  DietControllerInitName.h  DietControllerInitWeight.h  DietControllerReturnToDiets.cpp  DietControllerReturnToDiets.h  DietControllerSetHeight.h  DietControllerSetName.h  DietControllerSetWeight.h  DietControllerShowDiet.h  DietControllerShowDiets.h  DietControllerShowPeriods.h
DietController/src/: DietController.cpp  DietControllerAlreadyIdeal.cpp  DietControllerChooseDiet.cpp  DietControllerChoosePeriod.cpp  DietControllerConfirmDiet.cpp  DietControllerExit.cpp  DietControllerGreeting.cpp  DietControllerIdealWeight.cpp  DietControllerInitHeight.cpp  DietControllerInitName.cpp  DietControllerInitWeight.cpp  DietControllerSetHeight.cpp  DietControllerSetName.cpp  DietControllerSetWeight.cpp  DietControllerShowDiet.cpp  DietControllerShowDiets.cpp  DietControllerShowPeriods.cpp
DietModels/include/: DietModel.h
DietModels/src/: DietModel.cpp
DietService/include/: DietService.h
DietService/src/: DietService.cpp
DietViews/include/: TemplateToken.h  TemplateTokenizer.h  TokenCloseIF.h  TokenContainer.h  TokenContent.h  TokenController.h  TokenElse.h  TokenIF.h  TokenParam.h  View.h  ViewAskHeight.h  ViewEngine.h  ViewGreeting.h
DietViews/src/: TemplateToken.cpp  TemplateTokenizer.cpp  TokenCloseIF.cpp  TokenContainer.cpp  TokenContent.cpp  TokenController.cpp  TokenElse.cpp  TokenIF.cpp  TokenParam.cpp  View.cpp  ViewAskHeight.cpp  ViewEngine.cpp  ViewGreeting.cpp
Diets/include/: BuckwheatDiet.h  Diet.h  ProteinCarbohydrateDiet.h  ProteinDiet.h  SheldonDiet.h
Diets/src/: BuckwheatDiet.cpp  ProteinCarbohydrateDiet.cpp  ProteinDiet.cpp  SheldonDiet.cpp
include/: DietApp.h  DietContext.h
json/include/: json.h
src/: DietApp.cpp  DietContext.cpp
utils/include/: FileUtils.h
utils/src/: FileUtils.cpp
views/: alreadyIdeal.tpl  chooseDiet.tpl  choosePeriod.tpl  greeting.tpl  idealWeight.tpl  initHeight.tpl  initName.tpl  initWeight.tpl  result.tpl  showDiet.tpl
